--- a/tareas/Tema2/estilos2/src/app/globals.css
+++ b/tareas/Tema2/estilos2/src/app/globals.css
@@ -1,42 +1,48 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+  background-color: darkgrey;
   margin: 0;
+  padding: 0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+.header {
+  background-color: rgb(110, 105, 105);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
+.grid {
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  width: 300px;
+  margin: 0 auto;
+}
+.g1 { grid-area: 1 / 1 / 3 / 4; }
+.g2 { grid-area: 2 / 1 / 4 / 4; }
+.foot {
+  text-align: center;
+  background-color: rgb(110, 105, 105);
+  padding: 20px;
+}
+@media (max-width: 768px) {
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  nav ul {
+    flex-direction: column;
+    text-align: center;
   }
+  
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+  }
+  .g1 {
+    grid-area: 1 / 1 / 2 / 3; 
+  }
+
+  .g2 {
+    grid-area: 2 / 1 / 3 / 3;
+  }
+
 }
